# graph-fraud

./: .coverage  .env.example  .gitignore  MLOPS_SETUP.md  NEO4J_SETUP.md  README.md  README_OLD.md  SUMMARY.md  config.py  docker-compose.yml  health-report.txt  main.py  pyproject.toml  test_neo4j.py
.github/workflows/: cd.yml  ci.yml  deploy.yml  health-check.yml
dags/: batch_scoring_daily.py  fraud_detection_training.py
data/: raw.dvc
docker/: Dockerfile  Dockerfile.api
docs/: .gitignore  REPRODUCE.md  graph_rag_presentation.md  graph_rag_presentation_business_es.md
docs/coverage/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_defad1a87623d8bf___init___py.html  z_defad1a87623d8bf_fraud_detector_py.html  z_defad1a87623d8bf_graph_builder_py.html  z_defad1a87623d8bf_neo4j_graph_builder_py.html  z_e3d496e5189f5be2___init___py.html  z_e3d496e5189f5be2_graph_rag_py.html  z_e5ccf62099f28249___init___py.html  (+2 more)
mlflow/: mlflow.db.copy
notebooks/: fraud_detection_demo.ipynb
outputs/: high_risk_users_20251110_190003.json  high_risk_users_20251110_225407.json  high_risk_users_20251110_233934.json  high_risk_users_20251111_004818.json  mlflow_runs.json  risk_scores_20251110_233934.csv
scripts/: batch_scoring.py  check_system_health.py  export_mlflow_runs.py  generate_data.py  generate_graph_images.py  generate_interactive_graph.py  generate_presentation_plots.py  train_fraud_detector.py
tests/: test_data_generation.py  test_fraud_detector.py  test_graph_builder.py  test_graph_rag.py
(+16 files in other folders)
